# ChangeLog for app-text/dvipsk
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dvipsk/ChangeLog,v 1.47 2015/07/15 09:54:57 aballier Exp $

*dvipsk-5.995_p20150521 (15 Jul 2015)

  15 Jul 2015; Alexis Ballier <aballier@gentoo.org>
  +dvipsk-5.995_p20150521.ebuild:
  bump to texlive 2015 version

  15 Jul 2015; Alexis Ballier <aballier@gentoo.org>
  dvipsk-5.994_p20140525.ebuild:
  fix build with kpathsea from texlive 2015

  15 Jul 2015; Alexis Ballier <aballier@gentoo.org>
  -dvipsk-5.991_p20110705-r1.ebuild:
  remove old

  12 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> dvipsk-5.994_p20140525.ebuild:
  x86 stable wrt bug #550840

  12 Jul 2015; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.994_p20140525.ebuild:
  Stable for amd64, wrt bug #550840

*dvipsk-5.994_p20140525 (02 Nov 2014)

  02 Nov 2014; Alexis Ballier <aballier@gentoo.org>
  +dvipsk-5.994_p20140525.ebuild:
  bump to texlive 2014 version

*dvipsk-5.993_p20130530 (27 Jun 2013)

  27 Jun 2013; Alexis Ballier <aballier@gentoo.org>
  +dvipsk-5.993_p20130530.ebuild:
  version bump

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.992_p20120701.ebuild:
  Stable for sh, wrt bug #449298

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.992_p20120701.ebuild:
  Stable for s390, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.992_p20120701.ebuild:
  Stable for sparc, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.992_p20120701.ebuild:
  Stable for arm, wrt bug #449298

  20 Apr 2013; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.992_p20120701.ebuild:
  Stable for alpha, wrt bug #449298

  19 Apr 2013; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.992_p20120701.ebuild:
  Stable for ia64, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> dvipsk-5.992_p20120701.ebuild:
  Stable for ppc64, wrt bug #449298
