@@ -15,14 +15,24 @@ DIST texlive-module-dvips.doc-2014.tar.xz 482740 SHA256 a9cc6c6ec9f0ed97bc12bb8a
 DIST texlive-module-dvips.doc-2015.tar.xz 481208 SHA256 f3960b038f010ed8d2eafc60d3d22c89562acd9e995b41610a154fc3ade09940 SHA512 bbe2ff14b1f2f3cc3b5b2d7866cef64f33b7a8e1a5a71a9e6efd210748ab8fa5b6be94d0efe46d3b757b1c7db7713d9dfe56164c63488142eb790990a1d99f2c WHIRLPOOL 01d001648f33d45ca03b65d324c223d272771ee26c1bd852684b6581c742d8301fe3053b917a2a52fa7d7a7439c48cb1c9ec097fca2d1e9e319527862c899b64
 EBUILD dvipsk-5.992_p20120701.ebuild 2131 SHA256 d88a712e78648c52825a24b0eff56dfe69d39f3472691321abe0f44e32ddeed0 SHA512 4dd10f06d81eedbe400a3429be9a56905b859fac3a67afaa037009b719efecc2f37e0c6d3d95808b5179b2d7970b87fb4668ca3c760d5936adc49d81c5d97bd8 WHIRLPOOL 976ff83d6cbba98e18e038533f2a46781f99b1b314b847b2409f9681e2cf8065fd14bd3ccdb474432f8867507c08ecb263a325e35530c97e24910163893e4bfb
 EBUILD dvipsk-5.993_p20130530.ebuild 2066 SHA256 62bfcb9b9dc1384afeb062dc887520dbfb6096364ec7b4a0e88daa34be4e6352 SHA512 2f721881b4fa5fb028a33c1552ed6b1f434841482ac5bc9ef9b0f4be40538cbedab90cf332ebdbb4697db0aa5eb411a9b188d11cdb2b6ae2581e142181047893 WHIRLPOOL 69ebdb0019f4e1cf5c71a453344ba6b8cc0184e3240a7df82f7b5e3e86e25604dc127e944ae41b5c98ec507f6243be1fac99f82c603e2433afdb4a556e500220
-EBUILD dvipsk-5.994_p20140525.ebuild 2210 SHA256 82d6ccc403b0059b622fa6a7c1d290dae2f16b7408b5fd7cd09c86b6d8693333 SHA512 41fb8263c035d71b6daffe8aad186b7b160714e749c50db85ac80965cba3a0de356cc576c3db05e000321b3f751f1d6d043f87364a4e5c8588a1f679a651cc94 WHIRLPOOL b8294b57c8e598ab4e9f0bc6336b45e3e0bedc467f95d3c6c7833ed5189596b2880a443f4d48a6267451207c1581a527c666bd0ae338ba886b659fe12b592316
+EBUILD dvipsk-5.994_p20140525.ebuild 2209 SHA256 bf582a1b7ad3ec5d6a28b0be1d0575cb3e4e8dc0f15752b56f88863a8ce81668 SHA512 19e42874c9ea3a94f04b15c78cd2013e7b16c1747e7d0af085650915190f26d0fd7edec0798d68960b27781c0a917222d274ee499a580b12df64b8df9942d8d2 WHIRLPOOL b314c9c679cca4d970fc577c910518db1574c76627bdc9c818b69e59cbd6a533c4808c9539b4fba99fbf726754886b3f068fdc9f99e1225fa706771d1a5a10fd
 EBUILD dvipsk-5.995_p20150521.ebuild 2080 SHA256 84c97e98ddd768d7064901711f7d63ef2eaa2ebe4cd97a83325246e4c9b2df43 SHA512 ce146016a04dcf62f134142a6e4fd5e398533177aa2b22f887c82561234c30ece5b54d4cd721deac6bffba29de91ab046778c7569cd0bfdb51040b257769d455 WHIRLPOOL aaac1d51e18a5f54d64eb69e80002b96bc1b2a12e9be6b4c18b091111554440cf6dfbeace41442f08facd86684ff3b10875e2b57d2f4c5ac4d49ec2daa6f6d00
-MISC ChangeLog 6187 SHA256 2ed9be656c5a2050cdd277a7abe6914081dcfc5859c44cf978951af5867a1481 SHA512 2fd0352b0137bcd9c9e47b17b6968d85743aa647fcf8b9208b71ac40624de0c41be2cf257bda1ed873993b2f41ea9948a2d9936a515b5aba6bdfb47abd42d49d WHIRLPOOL 002b6ae6a5386302562db0b717191893931a681cc577f15fd27610b140d5c584db22634d1db23852f2a7ad49391aac2d6e3d099c84c0769a363f44ef50800cf0
+MISC ChangeLog 6307 SHA256 5376440432823651cb4d7f7e87d94d8641adaa319354f5ca446a03bb9a5d352d SHA512 f5624f1415c0aeb5a9d9d98b67e7798463314703c88562de52b30d03c88e855ff1c1fc455e24b30766950f0db53624b2efd7e24b21ef2a61876c27a769f7241a WHIRLPOOL 96a31af014bfd267d0754cdca20b197e401ef47b7f61326341094c36a5a465ec099a0e6acbed2fcc2718deadbf991593b32e914c0d66259a8de6d48a764814fa
 MISC metadata.xml 254 SHA256 78294df0a1d0e815b05f968bb43c4272d420e3025a38ea2d4fe6193a918a8e10 SHA512 1d0e4d92def0b0187a09480fb289fecf98812c95736ef3772e0763a1572181f6f31ae558b1dd9bdcfad3bf3768440122ee774ec56f1a9d4b18103a8a8efcb6d0 WHIRLPOOL c033be17e138d0533bd36185df412dc39ed32269b8875e53417f9e320461e7dcf9133479f2497cbaa3ef579dd65b7ac25490976c7c9a3250fc606e5448415268
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlWmLfMACgkQvFcC4BYPU0rBtwCbBTzX52sSvvPkRSh5UzVsBGT4
-N8wAn1ohfozkAaM5j4H6Y6vF+QFQXxuk
-=b1Aq
+iQIcBAEBCAAGBQJVr+zdAAoJEJOE+m71LUu6LGkQAJqJY2RZB2Pq9mbPX8eaDPGQ
+t09tvwUNJ6Sbm1hyWnd6nIA8ehfOPv6LOShdpjbDvm0xLLLHJbTXn8dKXYZ41EBb
+TsqM20VONoswhhYQBfISyT/7ZhZapv0oB974kUTaRTIMpKUBPVhyy3C4KVUzQOI1
+yfdg9Haxr+YFDmgbRM1QkE77CABd0JgrlB5onnPCV1RcjdZEknAwseNE9iqmSvHt
+2pr7h7P8WAQaL6WzNafry+jFa0plA3geoPo45XRKzPqHyJk/kwjgUIRhr/LfRCLH
+dz439N/pyH0p3xik97ggOF2C03cgISQc7QzzjkSAcokaatO9nyCTf4QUrf9EsgSO
+YE2F36VpY/RVKpUlCZ6eVDbvBAm5OLdiCIKEdZKfcc2i6oeSY7VKgurZ68/b9th3
+ga4qVDfiv4qnkadHSBqHbTwBRDwfzTFOMcugy9R7iiPCRnnhNycaOt6VJuQpz/4v
+cLQWMWQRjNyFs1HkBstyxtVUWp0aPIQ7hrwIo0+bpseCKVieqIBptJOVjBLlcZY5
+YhLjQ6dh+QH9I2Dtlkt5P1XLUtjpnLldGbseyNrb97L9nLDEWvuE7cGyYkm7UrNq
+aWAOhCmh9LlpggW6JosR9tzkplwN9jYBM+wBdh8hbtS6rbjSmQJhSEX9qJpKsuUG
+Pn2YRJrTxCaaMj9+1TLy
+=YJ9c
 -----END PGP SIGNATURE-----
