@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvipsk/dvipsk-5.994_p20140525.ebuild,v 1.4 2015/07/15 09:21:55 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvipsk/dvipsk-5.994_p20140525.ebuild,v 1.5 2015/07/22 19:17:11 blueness Exp $
 
 EAPI=4
 
@@ -29,7 +29,7 @@ SRC_URI="${SRC_URI} ) "
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~mips ~ppc ~ppc64 ~s390 ~sh x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+KEYWORDS="~alpha amd64 ~arm ~hppa ~mips ppc ~ppc64 ~s390 ~sh x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
 IUSE="doc source"
 
 DEPEND=">=dev-libs/kpathsea-6.2.0"
