@@ -7,14 +7,24 @@ DIST texlive-20140525-source.tar.xz 41657688 SHA256 08bb4eb02923ac65ce1183612c6b
 DIST texlive-20150521-source.tar.xz 45459552 SHA256 ed9bcd7bdce899c3c27c16a8c5c3017c4f09e1d7fd097038351b72497e9d4669 SHA512 9d06bb88c489715787ce619c4c6b5e2d4251e1db8d48ae7fe2d1a253634c76bc6d7282ef9c93c77847845cae01eafb58dfb37ba3fb83a6d223f0d7fe8f5d3855 WHIRLPOOL e19e4cf9c6122e8a2e80d3ad62171591a2d53317792ce69d7b2afdd6978d397c873565d597b1457d23ba6f5b5de33750955690a92fb6c34d814c075397b67a0b
 EBUILD ps2pkm-1.5_p20120701.ebuild 940 SHA256 1569d7e194cef80c5fc161de68accf8d0ac6af6007d7d32315e41404042e7c5f SHA512 e957a7377c7d0cd4b7091571df6b9237fad8938db2bd3655809936353658e562623302143bf1c4531a43ea2266df86e9cee9f9a3c10d292b3ab0bf2e4c0d6161 WHIRLPOOL 41a49d0e8f61d710421d5060ce4d3f87c3b90562bfda495713cbc7a39be8c11f0c7db47b6edfa5551923e9332a0700c091857c3e303621f475cf02ffc23a7c20
 EBUILD ps2pkm-1.5_p20130530.ebuild 955 SHA256 c8b1f50cdc1d57eb5bfd84e3ae1f77b99b201450c05aface93a5bed6e92f6717 SHA512 813b8b96f23ca9798fe92aa2081deaa4b2ef025fb0e71cd2e06b6189cbd39c00cba9184f33848454561126f121a33627d6338ad17f6796fae859a8ccaa55bb98 WHIRLPOOL 6a5e4c3073ed390868f2c70eaefc76d8985870eb9cc700b00af523ab8a5a330cd0438e69a0c2d23305bce5f90dd217bf60fa09368fb9311c51b8cb15e51da7d2
-EBUILD ps2pkm-1.5_p20140525.ebuild 1109 SHA256 93aacc53413f1bd5e55cea1f7a6045b0bc31b7fdadffd98d6a61a6b86ee4842f SHA512 695c74612cc7e54fd4cfa5503437619b7cc02060ae806dfe5db456cea796bf57b2a45df413802b8dd98e522d3512c9ef485514547367deb200b07db93370c1d0 WHIRLPOOL 97411f3939b9e4029f7004ce74649e3d715f7ad91519016755564c1927a0727109b81bcaaaea8a85b341d2af35c259f8355143bf059b92bad712d36fa90df5a0
+EBUILD ps2pkm-1.5_p20140525.ebuild 1108 SHA256 8973b2b03b4aab7220103594a3d2355195f31fea0048f16f47b40d94adf23925 SHA512 2c8753b5f36eb1335891468c6e4ab3fc81586c47a1c9b31352808052f801fd67986869acc46a5caf2f048c67f3dd9808502f57aa21ff07163b9c10e29942fe22 WHIRLPOOL 314fdb99353958f0479f009e67b9726c6c2ae0fee921a41d5ab49eb60cd13a7133b7ef1fdfe8cdaa648041b29c5be94d5f774bd376aaa8ccbe7cb002bebeb42b
 EBUILD ps2pkm-1.7_p20150521.ebuild 970 SHA256 3ab0c75d1e683d5790c446af08311ce652bad3bd3bb0b79803af18c58d6630bc SHA512 639a5e3aa93b173fb3bc774d04b8bdd318eed14fb3bd832f6193a959a80c077c8d73eab49bad9ec96f68a4902f2bfd0b244886c75e1d5485c08d3d9a81b6958f WHIRLPOOL 3b2da8e023bf93390bb0b95b373a5cfdbd013da0ee61db33463cd7e1d5137a482d238e34547c4bc5fa7ae460a928e1b4af9954ec57eb79675698dea14a76ca5a
-MISC ChangeLog 5587 SHA256 13fb1bfc20cc0957e3290dc9a152892186a10f9c6f02f1a1f2eb983b33adcf24 SHA512 d90dc11391cb3ce8e9ab6419635a20c1f550c4b6805bfa4e89e18038ef718ee2f8ecc546316617edbd0e645264aa999e478fb2e89a6289d166ea87eaea383dcf WHIRLPOOL 57ac25fb91f5931241db11ed25290407e576785477a3a47bb20f1ffdd80031db63399f5a6f632248f33868f39974ea8d3662edd0bd42e417f58a47c90fbacb25
+MISC ChangeLog 5705 SHA256 396445523cb61727b5e7916f7484b2e980c24c9117249f6e4d27ee58d36feaf8 SHA512 345fad29bcc1ac94c07234d08c1c78dcb621d929f268b0554ac163e0c9360c5fb0fc8727e0946f826d8bf76aacaf20330bd936f6f22282e28d74e2bd95681d17 WHIRLPOOL a205ef93cf8701175e0cb7543cb51ee489b2ab4d9fad9c33e8462da456b175c4b2e3e098aa70a6884f5b42cf81f147a7ce4ea7ba2671313d380955491c5b3cca
 MISC metadata.xml 254 SHA256 78294df0a1d0e815b05f968bb43c4272d420e3025a38ea2d4fe6193a918a8e10 SHA512 1d0e4d92def0b0187a09480fb289fecf98812c95736ef3772e0763a1572181f6f31ae558b1dd9bdcfad3bf3768440122ee774ec56f1a9d4b18103a8a8efcb6d0 WHIRLPOOL c033be17e138d0533bd36185df412dc39ed32269b8875e53417f9e320461e7dcf9133479f2497cbaa3ef579dd65b7ac25490976c7c9a3250fc606e5448415268
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlWmML0ACgkQvFcC4BYPU0rX6ACfcrxl1IMkpt8xCHyn2+ekCssl
-2j0An1qHTBS44Scjaw/qJpAjZfyBtvvY
-=4xxq
+iQIcBAEBCAAGBQJVr+0mAAoJEJOE+m71LUu6bTkP+wf0/abZ7lqU9EG6bge6mWEa
+ex9xIw6gjUMFbLYTd3Ctnxwta3TQm5nEu48sY4VtNzqD5q5/+hwjxi4V5JpDLoZg
+z+xkyDxbrXYrd+EhzvlKlgq/0SU7KQYIBJPSFX/8cwF5re64Um9Y14mL0iHcoLa9
+uH3rrFXsKINL2uAOfCMA5OhLphkzV2nC1okeRe64ztv4mnntxe3iezFqzFjCN2JW
+AyWBifwJxwbAOOmPyOxOXdy4fC9CpvD9pFenloD1/RxzjqRxMa1a6N8Yz4+JDhR1
+v4hvmxkvMKUYbuiqxBEmR15jwljSUNZH32jGLxSrf7pf2qrKGVAJH2F4QG/HEt/d
+gAZusNbl3S2VrJTtMDeiZSqKqkO4JDqEW9VV2CAt8lxcfHtj1vDnpahSj87PGig5
+ZD5b0E6/zxeMJxNdbEFUMZiFtMqgHaPTb9Fj0LxwcPplVPZ7c/U0aJ6isrFO3DJ0
+BQTGDXSORDW8gTkNtKB7JueHAGiR+SCIaeY1sV2qU+cz/TqqyVT40Stj095fSDwW
+Zg+cqlHEECSNUhBp8aW0bjrBM8819dLgtDgq/3h6sdymkv1iCDLCUv3x9AFk25nj
+/zUYliJ11rlPz8pFX+sIggxsSTxTrG9i/KsMGXQX69dO7RKJLKPxzGl8uIBRSC2F
+2ME60LUVKot1ALSalS+Z
+=YaNH
 -----END PGP SIGNATURE-----
