@@ -1,6 +1,10 @@
 # ChangeLog for app-text/ps2pkm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ps2pkm/ChangeLog,v 1.45 2015/07/15 10:06:52 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ps2pkm/ChangeLog,v 1.46 2015/07/22 19:18:20 blueness Exp $
+
+  22 Jul 2015; Anthony G. Basile <blueness@gentoo.org>
+  ps2pkm-1.5_p20140525.ebuild:
+  Stable for ppc, bug #550840.
 
 *ps2pkm-1.7_p20150521 (15 Jul 2015)
 
