@@ -1,6 +1,10 @@
 # ChangeLog for app-text/dvipsk
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvipsk/ChangeLog,v 1.47 2015/07/15 09:54:57 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvipsk/ChangeLog,v 1.48 2015/07/22 19:17:11 blueness Exp $
+
+  22 Jul 2015; Anthony G. Basile <blueness@gentoo.org>
+  dvipsk-5.994_p20140525.ebuild:
+  Stable for ppc, bug #550840.
 
 *dvipsk-5.995_p20150521 (15 Jul 2015)
 
